Fix box shadow being cut off due to hidden overflow

--- a/src/app/components/hero/hero.scss
+++ b/src/app/components/hero/hero.scss
@@ -147,7 +147,7 @@ div.hero {
     span {
       // font-size: clamp(1.2rem, 1.4vw, 1.4rem);
       font-weight: 700;
-      color: palette.$tertiary-500;
+      color: palette.$primary-500;
     }
   }
 }
